--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   outline: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   border: none;
 }
 
@@ -42,21 +42,19 @@
 
 .wrapper {
   width: 100%;
-  /* height: 100%; */
   display: grid;
   grid-template-columns: 70% 30%;
 }
 
 .select-crypto {
-  /* height: 100%; */
   text-align: center;
   padding: 1rem 0;
   font-size: 1.25rem;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .form-input {
-  /* height: 100%; */
   text-align: center;
   padding: 1rem 0;
   font-size: 1.25rem;
@@ -67,10 +65,6 @@
 }
 
 .form-submit-btn {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
   position: absolute;
   right: 0;
   bottom: 0;
@@ -85,4 +79,5 @@
   color: #ccc;
   text-transform: uppercase;
   letter-spacing: 1.5rem;
+  cursor: pointer;
 }
