--- a/src/App.css
+++ b/src/App.css
@@ -10,54 +10,70 @@
 .App {
   width: 100dvw;
   height: 100dvh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   background-color: #000;
   color: #ccc;
 }
 
 .header {
   width: 100%;
-  text-align: center;
-  margin: 5rem auto;
-  font-size: 2.5rem;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 100%;
+  height: 50%;
 }
 
 .result {
   width: 100%;
-  text-align: center;
-  margin: 2rem auto auto auto;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #000;
-  color: #fff;
-  font-size: 2.5rem;
+  color: #ccc;
+  font-size: 2rem;
+}
+
+.usd {
+  width: 100%;
+  height: 50%;
+  font-size: 3rem;
+  font-weight: bold;
+  color: #ccc;
 }
 
 .form {
   width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   text-align: center;
-  padding: 0 0 3rem 0;
-}
-
-.wrapper {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 70% 30%;
 }
 
 .select-crypto {
+  width: 100%;
   text-align: center;
   padding: 1rem 0;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 .form-input {
-  text-align: center;
+  width: 100%;
   padding: 1rem 0;
-  font-size: 1.25rem;
+  margin: 0.5rem 0;
+  text-align: center;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 
 .form-input::placeholder {
@@ -65,19 +81,13 @@
 }
 
 .form-submit-btn {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
   width: 100%;
-  margin: auto auto 0 auto;
-  text-align: center;
-  padding: 1rem 0;
+  padding: 1.5rem;
   font-size: 1.5rem;
   font-weight: bold;
   background-color: firebrick;
   color: #ccc;
   text-transform: uppercase;
-  letter-spacing: 1.5rem;
+  letter-spacing: 1rem;
   cursor: pointer;
 }
