--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline: none;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto";
   border: none;
 }
 
@@ -64,7 +66,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
-  text-transform: uppercase;
+  border-radius: 0;
 }
 
 .form-input {
@@ -73,7 +75,6 @@
   margin: 0.5rem 0;
   text-align: center;
   font-size: 1.5rem;
-  text-transform: uppercase;
 }
 
 .form-input::placeholder {
