--- a/src/App.css
+++ b/src/App.css
@@ -1,94 +1,81 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
+/* Mobile Styles */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  outline: none;
-  font-family: "Roboto";
-  border: none;
 }
 
 .App {
   width: 100dvw;
   height: 100dvh;
-  background-color: #000;
-  color: #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: Arial, sans-serif;
+  background-color: #f1f1f1;
 }
 
 .header {
   width: 100%;
-  height: 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.container {
-  width: 100%;
-  height: 50%;
-}
-
-.result {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #000;
-  color: #ccc;
-  font-size: 2rem;
-}
-
-.usd {
-  width: 100%;
-  height: 50%;
-  font-size: 3rem;
+  height: 20%;
+  display: grid;
+  place-items: center;
+  font-size: 1.75rem;
   font-weight: bold;
-  color: #ccc;
 }
 
 .form {
   width: 100%;
-  height: 25%;
+  height: 35%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  text-align: center;
-}
-
-.select-crypto {
-  width: 100%;
-  text-align: center;
-  padding: 1rem 0;
-  font-size: 1.5rem;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 0;
-}
-
-.form-input {
-  width: 100%;
-  padding: 1rem 0;
-  margin: 0.5rem 0;
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-.form-input::placeholder {
-  font-weight: bold;
+  justify-content: space-between;
 }
 
 .form-submit-btn {
+  display: block;
   width: 100%;
-  padding: 1.5rem;
-  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  background-color: #333;
+  color: #fff;
+  font-size: 1.25rem;
   font-weight: bold;
-  background-color: firebrick;
-  color: #ccc;
-  text-transform: uppercase;
-  letter-spacing: 1rem;
-  cursor: pointer;
+  letter-spacing: 0.5rem;
+  border: none;
+}
+
+.error {
+  font-size: 1rem;
+  text-align: center;
+  color: red;
+}
+
+/* Tablet Styles */
+@media screen and (min-width: 768px) {
+  .header {
+    font-size: 2rem;
+  }
+
+  .container {
+    max-width: fit-content;
+    margin: 0 auto;
+    border-radius: 1rem;
+  }
+
+  .result {
+    font-size: 2rem;
+  }
+
+  .select-crypto,
+  .form-input,
+  .select-currency,
+  .form-submit-btn {
+    cursor: pointer;
+  }
+
+  .error {
+    font-size: 1.5rem;
+  }
 }
