--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: space-between;
   font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
+  background-color: #000;
 }
 
 .header {
@@ -22,27 +22,27 @@
   place-items: center;
   font-size: 1.75rem;
   font-weight: bold;
+  color: #ccc;
 }
 
 .form {
   width: 100%;
-  height: 35%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .form-submit-btn {
   display: block;
   width: 100%;
   text-align: center;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 0.25rem;
-  background-color: #333;
+  background-color: firebrick;
   color: #fff;
   font-size: 1.25rem;
   font-weight: bold;
-  letter-spacing: 0.5rem;
+  letter-spacing: 1rem;
   border: none;
 }
 
@@ -68,11 +68,28 @@
     font-size: 2rem;
   }
 
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+  }
+
   .select-crypto,
   .form-input,
   .select-currency,
   .form-submit-btn {
+    border-radius: 0.25rem;
     cursor: pointer;
+  }
+
+  .form-input {
+    cursor: auto;
+  }
+
+  .form-submit-btn {
+    grid-column: 1 / 4;
+    font-size: 1.5rem;
+    letter-spacing: 1.5rem;
   }
 
   .error {
