--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,16 @@
 
 .header {
   width: 100%;
-  height: 20%;
-  display: grid;
-  place-items: center;
+  height: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-size: 1.75rem;
   font-weight: bold;
   color: #ccc;
@@ -44,6 +51,7 @@
   font-weight: bold;
   letter-spacing: 1rem;
   border: none;
+  margin-top: 1rem;
 }
 
 .error {
